refactor GET between full response and short responde (only value) New endpoint added /feature GET to retrieve only value with logic rules applied Old endpoint /conf GET responses with full feature information with json format.
TODO: implementation grpc client.
