# docs_examples/swagger.yml
@@ -8,18 +8,48 @@ basePath: /
 schemes:
   - http
 paths:
-  /conf/{featureId}:
+  /feature/{featureId}/{branch}:
     get:
-      summary: Returns featureId's value
-      description: Every configuration has detailed structure with several fields nested. The method returns only the value.
+      summary: Returns featureId's value only. Mainly to be called by clients. 
+      description: Every configuration has detailed structure with several fields nested. The method returns only value after all business rules have been applied.
       parameters:
         - in: path
           name: featureId
           required: true
           type: string
+          description: feature id
+        - in: path
+          name: branch
+          type: string
+          description: Only if we're using git service as datasource
       produces:
         - application/json
         - application/text
+      responses:
+        200:
+          description: OK
+        204:
+          description: configuration not found
+        500:
+          description: something went wrong
+ 
+  /conf/{featureId}/{branch}:
+    get:
+      summary: Returns featureId full information (all fields)
+      description: Every configuration has detailed structure with several fields nested. The method returns full information. No rules applied.
+      parameters:
+        - in: path
+          name: featureId
+          required: true
+          type: string
+          description: feature id
+        - in: path
+          name: branch
+          type: string
+          description: Only if we're using git service as datasource
+
+      produces:
+        - application/json
       responses:
         200:
           description: OK
